3種類でのjsでの書き方を実装

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,6 @@
       <br/>
     </footer>
   </div>
-  <script src="index.js" type="module"></script>
+  <script src="./src/js/class.js" type="module"></script>
 </body>
 </html>
